# hand-isomorphism-portable

./: .gitignore  CMakeLists.txt
include/: hand_isomorphism.h
src/: check_main.cpp  deck.h  hand_index.c  hand_isomorphism.cpp
